--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -5,7 +5,8 @@
     "pages/notice/notice",
     "pages/noticelist/noticelist",
     "pages/editNotice/editNotice",
-    "pages/newslist/newslist"
+    "pages/newslist/newslist",
+    "pages/addNews/addNews"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
