--- a/project.config.json
+++ b/project.config.json
@@ -86,6 +86,18 @@
         {
           "name": "pages/editNotice/editNotice",
           "pathName": "pages/editNotice/editNotice",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/newslist/newslist",
+          "pathName": "pages/newslist/newslist",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/addNews/addNews",
+          "pathName": "pages/addNews/addNews",
           "scene": null
         }
       ]
