--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,7 +6,8 @@
     "pages/noticelist/noticelist",
     "pages/editNotice/editNotice",
     "pages/newslist/newslist",
-    "pages/addNews/addNews"
+    "pages/addNews/addNews",
+    "pages/editNews/editNews"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
