--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,7 +7,10 @@
     "pages/editNotice/editNotice",
     "pages/newslist/newslist",
     "pages/addNews/addNews",
-    "pages/editNews/editNews"
+    "pages/editNews/editNews",
+    "pages/dangwulist/dangwulist",
+    "pages/addDangwu/addDangwu",
+    "pages/editDangwu/editDangwu"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
